# ai-server

./: Makefile  docker-compose.yml
agent-server/: Dockerfile  requirements.txt
agent-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ai-server-sdk/: .gitignore  pyproject.toml
ai-server-sdk/src/ai_server_sdk/: __init__.py
ai-server-sdk/src/ai_server_sdk/adapters/: __init__.py  comfyui.py  sd_forge.py  tts.py  whisper.py  youtube.py
ai-server-sdk/src/ai_server_sdk/agent/: __init__.py  runner.py
ai-server-sdk/src/ai_server_sdk/agent/services/: __init__.py  artifacts.py
ai-server-sdk/src/ai_server_sdk/agent/tools/: __init__.py  _utils.py  artifacts.py  tts.py  whisper.py  youtube.py
ai-server-sdk/src/ai_server_sdk/clients/: __init__.py  comfyui.py  sd_forge.py  tts.py  whisper.py  youtube.py
ai-server-sdk/src/ai_server_sdk/core/: __init__.py  models.py
ai-server-sdk/src/ai_server_sdk/ports/: __init__.py  comfyui.py  sd_forge.py  tts.py  whisper.py  youtube.py
bruno/: bruno.json
comfyui/: Dockerfile
nginx/: generate-certs.sh  nginx.conf
nginx-comfyui/: nginx.conf
nginx-vllm/: nginx.conf
nginx-webui/: Dockerfile  nginx.conf
scripts/: batch_add_subtitles.py  merge_mtp_into_agentworld.py  simulate_ui.mjs
sd-forge/: Dockerfile  download-models.sh
task_queue/: Dockerfile.api  Dockerfile.worker  get_transcript.py  quiz_api.py  quiz_engine.py  task_api.py  task_store.py  vocab_api.py  worker_runner.py
tts-api/: Dockerfile  setup.sh
vllm/: Dockerfile.gptoss
whisper-api/: Dockerfile  Dockerfile.gpu  (+5 more)
(+50 files in other folders)
