[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-server-sdk"
version = "0.1.0"
description = "Hexagonal architecture SDK for AI server clients"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "litellm>=1.50",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_server_sdk"]

[tool.ruff]
line-length = 100
